--- a/efood-gbm-exercicio/package.json
+++ b/efood-gbm-exercicio/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercicio-efood-gbm",
+  "name": "efood-gbm-exercicio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,14 +7,14 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^24.9.1",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.126",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^5.9.3",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,6 +50,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.4.0",
+    "prettier": "^3.6.2",
     "typescript-eslint": "^8.46.2"
   }
 }
